<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Voice Calculator!</string>
    <string name="app_name">Voice Calculator</string>
    <string name="action_settings">setting</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="fore">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">*</string>
    <string name="chu">/</string>
    <string name="dengyu">=</string>
    <string name="zhengfu">+/-</string>
    <string name="dihao">.</string>
    <string name="ping">x²</string>
    <string name="kai">√x</string>
    <string name="back">←</string>
    <string name="shan">C</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
</resources>
